# pii_redaction_service

./: .gitignore  README.md  main.py  pyproject.toml
app/api/: endpoints.py
app/core/: config.py  logging.py
app/data/: custom_patterns.jsonl
app/services/: document_loader.py  embedding_store.py  feedback_tracker.py  llm_chain.py  redactor.py
embeddings/: ediscovery.faiss  ediscovery_granular.faiss  random_resume.faiss  resume.faiss  resume_granular.faiss
metadata/: ediscovery_chunks.json  ediscovery_granular_chunks.json  random_resume_chunks.json  resume_chunks.json  resume_granular_chunks.json
reviews/: ediscovery_feedback.json  resume_feedback.json  testdoc_feedback.json
scripts/: index_pdf.py
tests/: test_embedding_store.py  test_feedback.py  test_redactor.py
